website/versioned_docs/version-2.13.x/reference/targets/thrift_sources.mdx
---
title: thrift_sources
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `thrift_source` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.codegen.thrift.apache.python`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*.thrift',)`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.thrift', 'new_*.thrift', '!old_ignore.thrift']`

</Field>

## `overrides`

<Field
    type_repr={`field.type_hint`}
>

Override the field values for generated `{generated_target_name}` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
```
overrides={
    "bar.thrift": {"description": "our user model"]},
    ("foo.thrift", "bar.thrift"): {"tags": ["overridden"]},
}
```

File paths and globs are relative to the BUILD file's directory. Every overridden file is validated to belong to this target's `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `thrift_source` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.

</Field>

## `python_resolve`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.codegen.thrift.apache.python"
>

The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.13/docs/targets#target-addresses and https://www.pantsbuild.org/v2.13/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>



</span>